objects/ssot__KnowledgeArticleCategory__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CategoryId__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Knowledge Article Category Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KnowledgeArticleVersionId__c</fullName>
        <label>Knowledge Article Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432584477_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KnowledgeArticleCategory_KnowledgeAr_rel</label>
        <referenceTo>ssot__KnowledgeArticleVersion__dlm</referenceTo>
        <relationshipLabel>KnowledgeArticleCategory_KnowledgeAr_rel</relationshipLabel>
        <relationshipName>rel_1710432584477_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432586113_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KnowledgeArticleCategory_CategoryId__rel</label>
        <referenceTo>ssot__Category__dlm</referenceTo>
        <relationshipLabel>KnowledgeArticleCategory_CategoryId__rel</relationshipLabel>
        <relationshipName>rel_1710432586113_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>